Se agregan graficas de humedad, precipitación y viento

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -412,7 +412,11 @@
             <hr class="border-light p-0 m-0">
             <div class="row no-gutters row-bordered">
               <div class="col-12 px-1 pt-4 pb-0">
-                <div id="weatherChartContainer" style="height: 300px;"></div>
+                <div id="windChart" style="height: 300px;"></div>
+                <div id="precipitationChart" style="height: 300px;"></div>
+                <div id="humidityChart" style="height: 300px;"></div>
+                <div id="temperatureChart" style="height: 300px;"></div>
+                <!-- <div id="weatherChartContainer" style="height: 300px;"></div> -->
               </div>
             </div>
             <hr class="border-light m-0 p-0">
