--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -17,6 +17,7 @@
   <!-- Icon fonts -->
   <link rel="stylesheet" href="vendor/fonts/fontawesome.css">
   <link rel="stylesheet" href="vendor/fonts/ionicons.css">
+  <link rel="stylesheet" href="vendor/fonts/open-iconic.css">
 
   <!-- Core stylesheets -->
   <link rel="stylesheet" href="vendor/css/rtl/bootstrap.css">
@@ -393,16 +394,18 @@
                   <div class="card-header-elements ml-auto">
                     <div id="weatherVariablesContainer" class="btn-group btn-group-toggle">
                       <label class="btn btn-success">
-                        <input type="radio" name="btn-radio" class="weatherVariable"> Temperatura
+                        <input type="radio" name="btn-radio" class="weatherVariable" chart="temperatureChart">
+                        Temperatura
                       </label>
                       <label class="btn btn-default">
-                        <input type="radio" name="btn-radio" class="weatherVariable"> Precipitación
+                        <input type="radio" name="btn-radio" class="weatherVariable" chart="precipitationChart">
+                        Precipitación
                       </label>
                       <label class="btn btn-default">
-                        <input type="radio" name="btn-radio" class="weatherVariable"> Humedad
+                        <input type="radio" name="btn-radio" class="weatherVariable" chart="humidityChart"> Humedad
                       </label>
                       <label class="btn btn-default">
-                        <input type="radio" name="btn-radio" class="weatherVariable"> Viento
+                        <input type="radio" name="btn-radio" class="weatherVariable" chart="windChart"> Viento
                       </label>
                     </div>
                   </div>
@@ -411,11 +414,11 @@
             </div>
             <hr class="border-light p-0 m-0">
             <div class="row no-gutters row-bordered">
-              <div class="col-12 px-1 pt-4 pb-0">
-                <div id="windChart" style="height: 300px;"></div>
-                <div id="precipitationChart" style="height: 300px;"></div>
-                <div id="humidityChart" style="height: 300px;"></div>
-                <div id="temperatureChart" style="height: 300px;"></div>
+              <div id="chartsContainer" class="col-12 px-1 pt-4 pb-0">
+                <div id="temperatureChart" style="height: 300px;display: none;"></div>
+                <div id="humidityChart" style="height: 300px;display: none;"></div>
+                <div id="precipitationChart" style="height: 300px;display: none;"></div>
+                <div id="windChart" style="height: 300px;display: none;"></div>
                 <!-- <div id="weatherChartContainer" style="height: 300px;"></div> -->
               </div>
             </div>
@@ -431,7 +434,189 @@
             <hr class="border-light p-0 m-0">
             <div class="row no-gutters row-bordered">
               <div class="col-12 px-1 pt-2 pb-0">
-                <img src="img/pronostico.png">
+                <table class="table card-table">
+                  <tbody>
+                    <tr>
+                      <td>
+                        <div class="card card-body">
+                          <h6 class="m-0">Hoy</h6>
+                          <p>18 Jun</p>
+                          <div class="text-center d-flex align-items-center" style="gap: 0;">
+                            <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
+                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-cloud-rain mr-2 mb-1"></div>
+                            <p class="m-0">0 mm</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="oi oi-droplet mr-2 mb-1 font-weight-light"></div>
+                            <p class="m-0">11%</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-wind mr-2 mb-1"></div>
+                            <p class="m-0">9km/h</p>
+                            <div class="ion ion-ios-arrow-round-up ml-2 mb-1"></div>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="ion ion-ios-leaf mr-2 mb-1"></div>
+                            <p class="m-0">-4 <sup>o</sup>C</p>
+                          </div>
+                        </div>
+                      </td>
+                      <td><div class="card card-body">
+                          <h6 class="m-0">Hoy</h6>
+                          <p>18 Jun</p>
+                          <div class="text-center d-flex align-items-center" style="gap: 0;">
+                            <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
+                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-cloud-rain mr-2 mb-1"></div>
+                            <p class="m-0">0 mm</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="oi oi-droplet mr-2 mb-1 font-weight-light"></div>
+                            <p class="m-0">11%</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-wind mr-2 mb-1"></div>
+                            <p class="m-0">9km/h</p>
+                            <div class="ion ion-ios-arrow-round-up ml-2 mb-1"></div>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="ion ion-ios-leaf mr-2 mb-1"></div>
+                            <p class="m-0">-4 <sup>o</sup>C</p>
+                          </div>
+                        </div></td>
+                      <td><div class="card card-body">
+                          <h6 class="m-0">Hoy</h6>
+                          <p>18 Jun</p>
+                          <div class="text-center d-flex align-items-center" style="gap: 0;">
+                            <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
+                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-cloud-rain mr-2 mb-1"></div>
+                            <p class="m-0">0 mm</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="oi oi-droplet mr-2 mb-1 font-weight-light"></div>
+                            <p class="m-0">11%</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-wind mr-2 mb-1"></div>
+                            <p class="m-0">9km/h</p>
+                            <div class="ion ion-ios-arrow-round-up ml-2 mb-1"></div>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="ion ion-ios-leaf mr-2 mb-1"></div>
+                            <p class="m-0">-4 <sup>o</sup>C</p>
+                          </div>
+                        </div></td>
+                      <td><div class="card card-body">
+                          <h6 class="m-0">Hoy</h6>
+                          <p>18 Jun</p>
+                          <div class="text-center d-flex align-items-center" style="gap: 0;">
+                            <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
+                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-cloud-rain mr-2 mb-1"></div>
+                            <p class="m-0">0 mm</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="oi oi-droplet mr-2 mb-1 font-weight-light"></div>
+                            <p class="m-0">11%</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-wind mr-2 mb-1"></div>
+                            <p class="m-0">9km/h</p>
+                            <div class="ion ion-ios-arrow-round-up ml-2 mb-1"></div>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="ion ion-ios-leaf mr-2 mb-1"></div>
+                            <p class="m-0">-4 <sup>o</sup>C</p>
+                          </div>
+                        </div></td>
+                      <td><div class="card card-body">
+                          <h6 class="m-0">Hoy</h6>
+                          <p>18 Jun</p>
+                          <div class="text-center d-flex align-items-center" style="gap: 0;">
+                            <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
+                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-cloud-rain mr-2 mb-1"></div>
+                            <p class="m-0">0 mm</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="oi oi-droplet mr-2 mb-1 font-weight-light"></div>
+                            <p class="m-0">11%</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-wind mr-2 mb-1"></div>
+                            <p class="m-0">9km/h</p>
+                            <div class="ion ion-ios-arrow-round-up ml-2 mb-1"></div>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="ion ion-ios-leaf mr-2 mb-1"></div>
+                            <p class="m-0">-4 <sup>o</sup>C</p>
+                          </div>
+                        </div></td>
+                      <td><div class="card card-body">
+                          <h6 class="m-0">Hoy</h6>
+                          <p>18 Jun</p>
+                          <div class="text-center d-flex align-items-center" style="gap: 0;">
+                            <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
+                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-cloud-rain mr-2 mb-1"></div>
+                            <p class="m-0">0 mm</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="oi oi-droplet mr-2 mb-1 font-weight-light"></div>
+                            <p class="m-0">11%</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-wind mr-2 mb-1"></div>
+                            <p class="m-0">9km/h</p>
+                            <div class="ion ion-ios-arrow-round-up ml-2 mb-1"></div>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="ion ion-ios-leaf mr-2 mb-1"></div>
+                            <p class="m-0">-4 <sup>o</sup>C</p>
+                          </div>
+                        </div></td>
+                      <td><div class="card card-body">
+                          <h6 class="m-0">Hoy</h6>
+                          <p>18 Jun</p>
+                          <div class="text-center d-flex align-items-center" style="gap: 0;">
+                            <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
+                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-cloud-rain mr-2 mb-1"></div>
+                            <p class="m-0">0 mm</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="oi oi-droplet mr-2 mb-1 font-weight-light"></div>
+                            <p class="m-0">11%</p>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="fas fa-wind mr-2 mb-1"></div>
+                            <p class="m-0">9km/h</p>
+                            <div class="ion ion-ios-arrow-round-up ml-2 mb-1"></div>
+                          </div>
+                          <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
+                            <div class="ion ion-ios-leaf mr-2 mb-1"></div>
+                            <p class="m-0">-4 <sup>o</sup>C</p>
+                          </div>
+                        </div></td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
