Se corrigen días de pronostico del tiempo

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -415,7 +415,7 @@
             <hr class="border-light p-0 m-0">
             <div class="row no-gutters row-bordered">
               <div id="chartsContainer" class="col-12 px-1 pt-4 pb-0">
-                <div id="temperatureChart" style="height: 300px;display: none;"></div>
+                <div id="temperatureChart" style="height: 300px;"></div>
                 <div id="humidityChart" style="height: 300px;display: none;"></div>
                 <div id="precipitationChart" style="height: 300px;display: none;"></div>
                 <div id="windChart" style="height: 300px;display: none;"></div>
@@ -440,7 +440,7 @@
                       <td>
                         <div class="card card-body">
                           <h6 class="m-0">Hoy</h6>
-                          <p>18 Jun</p>
+                          <p>17 Jun</p>
                           <div class="text-center d-flex align-items-center" style="gap: 0;">
                             <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
                             <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
@@ -465,11 +465,11 @@
                         </div>
                       </td>
                       <td><div class="card card-body">
-                          <h6 class="m-0">Hoy</h6>
+                          <h6 class="m-0">Martes</h6>
                           <p>18 Jun</p>
                           <div class="text-center d-flex align-items-center" style="gap: 0;">
                             <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
-                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                            <h5 class="m-0 font-weight-bold">25 <sup>o</sup>C</h5>
                           </div>
                           <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
                             <div class="fas fa-cloud-rain mr-2 mb-1"></div>
@@ -490,11 +490,11 @@
                           </div>
                         </div></td>
                       <td><div class="card card-body">
-                          <h6 class="m-0">Hoy</h6>
-                          <p>18 Jun</p>
+                          <h6 class="m-0">Miercoles</h6>
+                          <p>19 Jun</p>
                           <div class="text-center d-flex align-items-center" style="gap: 0;">
                             <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
-                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                            <h5 class="m-0 font-weight-bold">22 <sup>o</sup>C</h5>
                           </div>
                           <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
                             <div class="fas fa-cloud-rain mr-2 mb-1"></div>
@@ -515,11 +515,11 @@
                           </div>
                         </div></td>
                       <td><div class="card card-body">
-                          <h6 class="m-0">Hoy</h6>
-                          <p>18 Jun</p>
+                          <h6 class="m-0">Jueves</h6>
+                          <p>20 Jun</p>
                           <div class="text-center d-flex align-items-center" style="gap: 0;">
                             <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
-                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                            <h5 class="m-0 font-weight-bold">22 <sup>o</sup>C</h5>
                           </div>
                           <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
                             <div class="fas fa-cloud-rain mr-2 mb-1"></div>
@@ -540,11 +540,11 @@
                           </div>
                         </div></td>
                       <td><div class="card card-body">
-                          <h6 class="m-0">Hoy</h6>
-                          <p>18 Jun</p>
+                          <h6 class="m-0">Viernes</h6>
+                          <p>21 Jun</p>
                           <div class="text-center d-flex align-items-center" style="gap: 0;">
                             <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
-                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                            <h5 class="m-0 font-weight-bold">19 <sup>o</sup>C</h5>
                           </div>
                           <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
                             <div class="fas fa-cloud-rain mr-2 mb-1"></div>
@@ -565,11 +565,11 @@
                           </div>
                         </div></td>
                       <td><div class="card card-body">
-                          <h6 class="m-0">Hoy</h6>
-                          <p>18 Jun</p>
+                          <h6 class="m-0">Sabado</h6>
+                          <p>22 Jun</p>
                           <div class="text-center d-flex align-items-center" style="gap: 0;">
                             <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
-                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                            <h5 class="m-0 font-weight-bold">19 <sup>o</sup>C</h5>
                           </div>
                           <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
                             <div class="fas fa-cloud-rain mr-2 mb-1"></div>
@@ -590,11 +590,11 @@
                           </div>
                         </div></td>
                       <td><div class="card card-body">
-                          <h6 class="m-0">Hoy</h6>
-                          <p>18 Jun</p>
+                          <h6 class="m-0">Domingo</h6>
+                          <p>23 Jun</p>
                           <div class="text-center d-flex align-items-center" style="gap: 0;">
                             <div class="fas fa-sun text-large text-warning mr-2 font-weight-light"></div>
-                            <h5 class="m-0 font-weight-bold">30 <sup>o</sup>C</h5>
+                            <h5 class="m-0 font-weight-bold">22 <sup>o</sup>C</h5>
                           </div>
                           <div class="text-center d-flex align-items-center mt-2" style="gap: 0;">
                             <div class="fas fa-cloud-rain mr-2 mb-1"></div>
