Se cambia estilo de loading en lote

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -660,7 +660,7 @@
     </div>
   </div>
 
-  <script async
+  <script 
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtLZFbHgUUYvb5U3uCWH5axzfj_Fr-jX8&loading=async&libraries=places">
     </script>
 
